# gust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  pr.yml  release.yml  security.yml  stale.yml
.memory_bank/: conventions.md  open-work.md  project-overview.md  project_state.md
docs/: ARCHITECTURE.md  ROADMAP.md  book.toml
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-d61bdd86.js  toc-5fe465e0.js  toc.html
docs/book/advanced/: codegen.html  compiler_plugins.html  custom_targets.html  index.html
docs/book/appendix/: changelog.html  faq.html  grammar.html  index.html  known_limitations.html  stdlib_api.html
docs/book/cookbook/: circuit_breaker.html  cqrs.html  event_sourcing.html  health_check.html  index.html  patterns.html  pipeline.html  rate_limiting.html  request_response.html  retry.html  saga.html  worker_pool.html
docs/book/guides/: debugging.html  index.html  migration_rust.html  performance.html  security.html  tokio_integration.html  workflow_runtime.html
docs/book/reference/: channels.html  effects_handlers.html  errors.html  index.html  lifecycle.html  states_transitions.html  supervision.html  syntax.html  types.html
docs/book/tutorial/: adding_effects.html  async.html  deployment.html  first_machine.html  getting_started.html  index.html  supervision.html  testing.html
docs/examples/: async_payment.gu  enum_status.gu
docs/plans/: 2026-02-13-phase1-feature3-import-resolution.md  2026-02-13-phase2-errors-cli.md  2026-04-21-vscode-marketplace-publish.md
docs/specs/: SPEC-PHASE1.md  SPEC-PHASE2-part2.txt  SPEC-PHASE2.md  SPEC-PHASE3.md  SPEC-PHASE4.md  package_registry.md
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: codegen.md  compiler_plugins.md  custom_targets.md
docs/src/appendix/: changelog.md  faq.md  grammar.md  known_limitations.md  stdlib_api.md
docs/src/cookbook/: circuit_breaker.md  cqrs.md  event_sourcing.md  health_check.md  patterns.md  pipeline.md  rate_limiting.md  request_response.md  retry.md  saga.md  worker_pool.md
docs/src/guides/: debugging.md  migration_rust.md  performance.md  security.md  tokio_integration.md  workflow_runtime.md
docs/src/reference/: channels.md  effects_handlers.md  errors.md  lifecycle.md  states_transitions.md  supervision.md  syntax.md  types.md
docs/src/tutorial/: adding_effects.md  async.md  deployment.md  first_machine.md  getting_started.md  supervision.md  testing.md
docs/tests/: doc_examples.rs
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: gust.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: gust.tmLanguage.json
examples/: order_processor.g.go  order_processor.g.rs  order_processor.gu
examples/cffi/: Makefile  README.md  door.gu  main.c
examples/event_processor/: Cargo.toml  README.md  build.rs
examples/event_processor/src/: main.rs  processor.g.rs  processor.gu
examples/event_processor/tests/: test.rs
examples/microservice/: Cargo.toml  Dockerfile  README.md
examples/microservice/src/: effects.rs  main.rs  order.g.rs  order.gu  payment.g.rs  payment.gu  supervisor.g.rs  supervisor.gu
examples/microservice/tests/: integration_test.rs
examples/nostd/: Cargo.toml  README.md  sensor.gu
examples/wasm/: README.md  counter.gu  index.html  package.json
examples/workflow_engine/: Cargo.toml  README.md  build.rs
examples/workflow_engine/src/: engine_failure.g.rs  main.rs  workflow.g.rs  workflow.gu
examples/workflow_engine/tests/: test.rs
gust-build/: Cargo.toml
gust-build/src/: lib.rs
gust-cli/: Cargo.toml
gust-cli/src/: main.rs
gust-cli/tests/: cli_integration.rs
gust-lang/: Cargo.toml
gust-lang/src/: ast.rs  codegen.rs  codegen_common.rs  codegen_ffi.rs  codegen_go.rs  codegen_nostd.rs  codegen_schema.rs  codegen_wasm.rs  error.rs  format.rs  grammar.pest  lib.rs  parser.rs  validator.rs
gust-lang/tests/: action_codegen_metadata.rs  action_handler_safety.rs  action_keyword.rs  codegen_edge_cases.rs  diagnostics_validation.rs  docs_snippets.rs  formatter_roundtrip.rs  generated_code_compilation.rs  generics_support.rs  go_codegen_concurrency.rs  import_resolution.rs  language_semantics.rs  nostd_codegen_coverage.rs  parser_property_tests.rs  phase1_language.rs  phase2_diagnostics.rs  phase3_go_concurrency.rs  phase3_rust_concurrency.rs  phase4_doc_examples.rs  phase4_targets.rs  phase5_compilation.rs  rust_codegen_concurrency.rs  schema_generation.rs  target_backends.rs  tracing_codegen.rs  wasm_codegen_coverage.rs
gust-lsp/: Cargo.toml
gust-lsp/src/: lib.rs  main.rs
gust-lsp/tests/: lsp_features_test.rs
gust-mcp/: Cargo.toml
gust-mcp/src/: lib.rs  main.rs
gust-mcp/tests/: mcp_tools_test.rs
gust-runtime/: Cargo.toml
gust-runtime/src/: lib.rs
gust-runtime/tests/: runtime_tests.rs
gust-stdlib/: Cargo.toml  build.rs  circuit_breaker.gu  engine_failure.gu  health_check.gu  rate_limiter.gu  request_response.gu  retry.gu  saga.gu
gust-stdlib/src/: lib.rs
gust-stdlib/tests/: integration_test.rs  machine_tests.rs
gust-template/: Cargo.toml  Dockerfile  README.md
gust-template/.github/workflows/: ci.yml
gust-template/src/: app.gu  effects.rs  main.rs
gust-template/tests/: integration_test.rs
memory_bank/: SESSION_STATE.md
