[package]
name = "gust-lang"
version = "0.2.0"
edition = "2021"
description = "The Gust programming language compiler - parse .gu files and emit Rust"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
strsim = "0.11"
colored = "3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
serde_json = "1"
