[package]
name = "gust-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "The Gust programming language compiler — parse .gu state machine files and emit Rust, Go, WASM, no_std, or C FFI code"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "2.0"
strsim = "0.11"
colored = "3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
serde_json = "1"
