[package]
name = "gust-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "Model Context Protocol (MCP) server exposing the Gust compiler to AI-assisted development tools"

[dependencies]
gust-lang = { path = "../gust-lang", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
