[package]
name = "gust-stdlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
description = "Standard library of reusable Gust state machines (circuit breaker, retry, saga, rate limiter, and more)"
build = "build.rs"

[dependencies]

[dev-dependencies]
gust-lang = { path = "../gust-lang", version = "0.2.0" }
