[workspace]

[package]
name = "gust-workflow-engine-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gust-runtime = { path = "../../gust-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
gust-build = { path = "../../gust-build" }
